--- a/Class1002/Base.lproj/Main.storyboard
+++ b/Class1002/Base.lproj/Main.storyboard
@@ -54,6 +54,12 @@
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="80b-Za-1ps">
+                                                    <rect key="frame" x="58" y="35" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="v5A-cL-M52" firstAttribute="leading" secondItem="wcW-Fj-O7k" secondAttribute="trailing" constant="20" id="2mk-7A-KiY"/>
@@ -66,6 +72,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="isHaveFamilyLabel" destination="80b-Za-1ps" id="rAp-hx-nmX"/>
                                             <outlet property="nameLabel" destination="v5A-cL-M52" id="l6V-UR-E7W"/>
                                             <outlet property="phoneLabel" destination="JON-gX-QlV" id="KXf-fB-LBV"/>
                                             <outlet property="photoView" destination="wcW-Fj-O7k" id="3OY-zg-RFL"/>
