--- a/Class1002/Base.lproj/Main.storyboard
+++ b/Class1002/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="QYB-pb-43p">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="I6F-BW-ofS">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -17,9 +17,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="65" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="YSy-pr-gdd">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="65" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="YSy-pr-gdd">
                                 <rect key="frame" x="0.0" y="64" width="320" height="504"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="AA" rowHeight="65" id="Ap2-O2-lrm" customClass="AddressCell">
                                         <rect key="frame" x="0.0" y="49.5" width="320" height="65"/>
@@ -29,7 +29,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="姓名" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v5A-cL-M52">
-                                                    <rect key="frame" x="70" y="19" width="60" height="21"/>
+                                                    <rect key="frame" x="60" y="19" width="60" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="FCa-uF-NCJ"/>
                                                         <constraint firstAttribute="width" constant="60" id="Wuh-x3-qib"/>
@@ -39,14 +39,14 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AppIcon40x40.png" translatesAutoresizingMaskIntoConstraints="NO" id="wcW-Fj-O7k">
-                                                    <rect key="frame" x="10" y="10" width="40" height="40"/>
+                                                    <rect key="frame" x="10" y="10" width="30" height="40"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="40" id="1kZ-0z-ndz"/>
+                                                        <constraint firstAttribute="width" constant="30" id="1kZ-0z-ndz"/>
                                                         <constraint firstAttribute="height" constant="40" id="rM1-Jc-EnJ"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="13569714835" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JON-gX-QlV">
-                                                    <rect key="frame" x="140" y="19" width="137" height="21"/>
+                                                    <rect key="frame" x="130" y="19" width="147" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="a8b-Lg-itO"/>
                                                     </constraints>
@@ -113,7 +113,108 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g5I-Uq-wIY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="437" y="562"/>
+            <point key="canvasLocation" x="969" y="562"/>
+        </scene>
+        <!--Share List View Controller-->
+        <scene sceneID="Aht-sx-7fM">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="EG6-xZ-sAa" customClass="ShareListViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="wIl-MP-8tq"/>
+                        <viewControllerLayoutGuide type="bottom" id="hbj-Z7-TUR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="MJX-em-u1Z">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="96" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6nZ-Pl-oHl">
+                                <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ShareListCell" rowHeight="96" id="7C5-W6-XPl" customClass="ShareListCell">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="96"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="7C5-W6-XPl" id="1iA-6J-vKf">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="95.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4fd-pT-EFf">
+                                                    <rect key="frame" x="12" y="10" width="296" height="75.5"/>
+                                                    <color key="backgroundColor" red="0.37823387980461121" green="0.90784269571304321" blue="0.87718081474304199" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="4fd-pT-EFf" secondAttribute="trailing" constant="12" id="HoS-5e-k3D"/>
+                                                <constraint firstItem="4fd-pT-EFf" firstAttribute="top" secondItem="1iA-6J-vKf" secondAttribute="top" constant="10" id="XIW-os-f91"/>
+                                                <constraint firstItem="4fd-pT-EFf" firstAttribute="leading" secondItem="1iA-6J-vKf" secondAttribute="leading" constant="12" id="fO0-Kb-ixd"/>
+                                                <constraint firstAttribute="bottom" secondItem="4fd-pT-EFf" secondAttribute="bottom" constant="10" id="knT-4i-jJU"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="titleLabel" destination="4fd-pT-EFf" id="Hjr-ka-fVn"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="EG6-xZ-sAa" id="yKs-o8-Pw4"/>
+                                    <outlet property="delegate" destination="EG6-xZ-sAa" id="6Vm-qi-3Uk"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="6nZ-Pl-oHl" secondAttribute="trailing" id="GeJ-Dp-Eej"/>
+                            <constraint firstItem="hbj-Z7-TUR" firstAttribute="top" secondItem="6nZ-Pl-oHl" secondAttribute="bottom" id="HMn-F0-FIk"/>
+                            <constraint firstItem="6nZ-Pl-oHl" firstAttribute="leading" secondItem="MJX-em-u1Z" secondAttribute="leading" id="SxV-xo-IUu"/>
+                            <constraint firstItem="6nZ-Pl-oHl" firstAttribute="top" secondItem="wIl-MP-8tq" secondAttribute="bottom" id="mPk-At-61i"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="STr-qq-cZs"/>
+                    <connections>
+                        <outlet property="tableView" destination="6nZ-Pl-oHl" id="bdv-TU-dc3"/>
+                        <segue destination="1kd-cs-zp9" kind="push" identifier="shareListToDetail" id="pQF-wd-Xce"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fvz-SM-drG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1370" y="1166"/>
+        </scene>
+        <!--Share List Detail View Controller-->
+        <scene sceneID="Yhu-Ze-OG9">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="1kd-cs-zp9" customClass="ShareListDetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="IYA-kx-I9K"/>
+                        <viewControllerLayoutGuide type="bottom" id="IYe-Dw-qHT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="AIf-LR-GMl">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="86c-LO-lNS">
+                                <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="86c-LO-lNS" firstAttribute="top" secondItem="IYA-kx-I9K" secondAttribute="bottom" id="7Au-BW-7Tb"/>
+                            <constraint firstItem="IYe-Dw-qHT" firstAttribute="top" secondItem="86c-LO-lNS" secondAttribute="bottom" id="SWD-5d-yLE"/>
+                            <constraint firstItem="86c-LO-lNS" firstAttribute="leading" secondItem="AIf-LR-GMl" secondAttribute="leading" id="WjL-cD-61U"/>
+                            <constraint firstAttribute="trailing" secondItem="86c-LO-lNS" secondAttribute="trailing" id="zOu-2x-QkZ"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="b4R-sL-R7D"/>
+                    <connections>
+                        <outlet property="webView" destination="86c-LO-lNS" id="yck-hD-rcS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="teo-v4-fzW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1745" y="1171"/>
         </scene>
         <!--详情-->
         <scene sceneID="lVA-vc-QrC">
@@ -143,7 +244,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <imageView autoresizesSubviews="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="IMG_0390.png" translatesAutoresizingMaskIntoConstraints="NO" id="DAo-xc-p5Z">
-                                <rect key="frame" x="13" y="153" width="145" height="110"/>
+                                <rect key="frame" x="13" y="153" width="120" height="160"/>
                                 <gestureRecognizers/>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="TXe-Sl-OrU" appends="YES" id="utm-yf-2Pl"/>
@@ -167,12 +268,13 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="860" y="549"/>
+            <point key="canvasLocation" x="1392" y="549"/>
         </scene>
-        <!--Base Navigation Controller-->
+        <!--通讯录-->
         <scene sceneID="f2E-g9-4eG">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="QYB-pb-43p" customClass="BaseNavigationController" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="通讯录" id="UcL-F0-SKz"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="YTk-tv-w7A">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -185,7 +287,44 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pbg-Gr-urj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="461" y="567"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="7SV-Og-EvP">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="I6F-BW-ofS" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="UGG-yX-RpW">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="QYB-pb-43p" kind="relationship" relationship="viewControllers" id="P7e-HW-vFb"/>
+                        <segue destination="mTS-2I-jUc" kind="relationship" relationship="viewControllers" id="XXw-xt-obV"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WHF-ZL-Jlx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
             <point key="canvasLocation" x="-71" y="567"/>
+        </scene>
+        <!--分享-->
+        <scene sceneID="ZO1-0F-riB">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="mTS-2I-jUc" customClass="BaseNavigationController" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="分享" id="f9a-Lm-hDm"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="AQF-lU-2V0">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="EG6-xZ-sAa" kind="relationship" relationship="rootViewController" id="bA2-K5-rtN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1IF-cd-z6i" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="427" y="1166"/>
         </scene>
     </scenes>
     <resources>
